# zonefile-crds

./: Cargo.toml  LICENSE  README.md
crds/kubi.zone/v1alpha1/: ZoneFile.yaml
src/: lib.rs
