[package]
name = "zonefile-crds"
description = "Rust library exposing the Zonefile CRDs as types."
keywords = ["kubernetes", "kubizone", "crd", "zonefile"]
repository = "https://github.com/kubi-zone/zonefile-crds"
version = "0.4.0"
edition = "2021"
license = "MIT"

[dependencies]
kubizone-crds = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
kube = { version = "0.90", default-features = false, features = [
    "derive",
    "rustls-tls",
    "client",
    "runtime",
] }
k8s-openapi = { version = "0.21", features = ["v1_29"] }

[dev-dependencies]
serde_yaml = "0.9"
